--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "start:server": "json-server-auth --watch db.json --port 3001",
+    "start:server": "json-server --watch db.json --port 3001",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
