--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "start:server": "json-server --watch db.json --port 3000",
+    "start:server": "json-server-auth --watch db.json --port 3000",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -31,6 +31,8 @@
     "@types/jasmine": "~4.0.0",
     "autoprefixer": "^10.4.7",
     "jasmine-core": "~4.1.0",
+    "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
